NetBSD Problem Report #40130

From bernd@arresum.veego.de  Sun Dec  7 16:42:08 2008
Return-Path: <bernd@arresum.veego.de>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id 0C2CE63B121
	for <gnats-bugs@gnats.NetBSD.org>; Sun,  7 Dec 2008 16:42:08 +0000 (UTC)
Message-Id: <200812071641.mB7GfwBw020943@arresum.veego.de>
Date: Sun, 7 Dec 2008 17:41:58 +0100 (CET)
From: Bernd Ernesti <pr200826@veego.de>
Reply-To: Bernd Ernesti <pr200826@veego.de>
To: gnats-bugs@gnats.NetBSD.org
Subject: aiboost doesn't work with a M3A78-T board
X-Send-Pr-Version: 3.95

>Number:         40130
>Category:       port-i386
>Synopsis:       aiboost doesn't work with a M3A78-T board
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    jruoho
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Dec 07 16:45:00 +0000 2008
>Closed-Date:    Wed Jun 22 10:13:39 +0000 2011
>Last-Modified:  Wed Jun 22 10:13:39 +0000 2011
>Originator:     Bernd Ernesti
>Release:        NetBSD 5.99.02
>Organization:

>Environment:
System: NetBSD 5.99.02
Architecture: i386
Machine: i386
>Description:
	The aiboost driver doesn't work with a M3A78-T board (790GX).

	This is the kernel output with AIBOOST_DEBUG and a modified
	aiboost_getcomp to get the reason for the failure:

aiboost0 at acpi0 (ASOC, ATK0110-16843024)
aiboost0: ASUS AI Boost Hardware monitor
aiboost_getcomp: AcpiGetHandle: AE_NOT_FOUND

	The DPRINTF in aiboost_getcomp should be changed so it
	use AcpiFormatException(status).

	The acpi dump contains no TSIF, VSIF nor FSIF entries.
	A dsl file is available on request.

>How-To-Repeat:
	Boot a kernel with a M3A78-T board and notice that
	envstat doesn't show any aiboost sensors.
>Fix:

>Release-Note:

>Audit-Trail:
From: Paul Goyette <pgoyette@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/40130 CVS commit: src/sys/dev/acpi
Date: Thu, 18 Feb 2010 13:52:34 +0000

 Module Name:	src
 Committed By:	pgoyette
 Date:		Thu Feb 18 13:52:33 UTC 2010

 Modified Files:
 	src/sys/dev/acpi: aiboost.c

 Log Message:
 Enhance DPRINTF to use AcpiFormatException as suggested in PR kern/40130


 To generate a diff of this commit:
 cvs rdiff -u -r1.27 -r1.28 src/sys/dev/acpi/aiboost.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Bernd Ernesti <pr200826@veego.de>
To: Paul Goyette <paul@whooppee.com>
Cc: gnats-bugs@NetBSD.org
Subject: Re: kern/40130
Date: Thu, 18 Feb 2010 18:36:43 +0100

 Hi Paul,

 On Thu, Feb 18, 2010 at 05:02:30AM -0800, Paul Goyette wrote:
 > Hey, Bernd,
 > 
 > I was scanning through some old PRs and ran into this one from you, from
 > more than a year ago.
 > 
 > Is this still a problem?  And if so, have you tried the recently-added 
 > aibs(4) replacement?

 It is still a problem because I had to switch to the netbsd-5 branch which
 does not have the aibs(4) driver.
 Just adding the -current driver alone to my kernel would not so be easy
 because think that I need some other infrastructure changes too.

 Bernd

From: Paul Goyette <paul@whooppee.com>
To: Bernd Ernesti <pr200826@veego.de>
Cc: gnats-bugs@NetBSD.org
Subject: Re: kern/40130
Date: Thu, 18 Feb 2010 10:45:14 -0800 (PST)

 On Thu, 18 Feb 2010, Bernd Ernesti wrote:

 >> Is this still a problem?  And if so, have you tried the recently-added
 >> aibs(4) replacement?
 >
 > It is still a problem because I had to switch to the netbsd-5 branch which
 > does not have the aibs(4) driver.
 > Just adding the -current driver alone to my kernel would not so be easy
 > because think that I need some other infrastructure changes too.

 Yes, aibs(4) would require significant updates to sysmon_envsys(9) that 
 I've been so furiously committing.  :)

 I'll have a closer look and see if there's anything that we can do.  I 
 can't make any real promises, though.


 -------------------------------------------------------------------------
 |   Paul Goyette   | PGP DSS Key fingerprint: |  E-mail addresses:      |
 | Customer Service | FA29 0E3B 35AF E8AE 6651 |  paul at whooppee.com   |
 | Network Engineer | 0786 F758 55DE 53BA 7731 | pgoyette at juniper.net |
 | Kernel Developer |                          | pgoyette at netbsd.org  |
 -------------------------------------------------------------------------

From: Jukka Ruohonen <jruohonen@iki.fi>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: kern/40130
Date: Wed, 4 Aug 2010 11:50:44 +0300

 > On Thu, 18 Feb 2010, Bernd Ernesti wrote:
 > It is still a problem because I had to switch to the netbsd-5 branch which
 > does not have the aibs(4) driver.
 > Just adding the -current driver alone to my kernel would not so be easy
 > because think that I need some other infrastructure changes too.

 Can you try MONOLITHIC kernel from HEAD?

 Also, as usual, acpidump(8) output is needed to diagnose this any further.

From: Bernd Ernesti <pr200826@veego.de>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: kern/40130
Date: Wed, 4 Aug 2010 19:39:27 +0200

 On Wed, Aug 04, 2010 at 08:55:02AM +0000, Jukka Ruohonen wrote:
 > The following reply was made to PR port-i386/40130; it has been noted by GNATS.
 > 
 > From: Jukka Ruohonen <jruohonen@iki.fi>
 > To: gnats-bugs@NetBSD.org
 > Cc: 
 > Subject: Re: kern/40130
 > Date: Wed, 4 Aug 2010 11:50:44 +0300
 > 
 >  > On Thu, 18 Feb 2010, Bernd Ernesti wrote:
 >  > It is still a problem because I had to switch to the netbsd-5 branch which
 >  > does not have the aibs(4) driver.
 >  > Just adding the -current driver alone to my kernel would not so be easy
 >  > because think that I need some other infrastructure changes too.
 >  
 >  Can you try MONOLITHIC kernel from HEAD?

 I want to avoid booting a -current kernel since I had not so good expierence in
 the past and -current would not help me at all since I need a stable version
 on that machine.

 Bernd

From: Jukka Ruohonen <jruohonen@iki.fi>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: kern/40130
Date: Wed, 4 Aug 2010 20:51:24 +0300

 On Wed, Aug 04, 2010 at 05:40:04PM +0000, Bernd Ernesti wrote:
 >  >  Can you try MONOLITHIC kernel from HEAD?
 >  
 >  I want to avoid booting a -current kernel since I had not so good
 >  expierence in the past and -current would not help me at all since I need
 >  a stable version on that machine.

 Sure.

 But if you boot a -current kernel, others might have a chance to understand
 whether this is something that was fixed in -current / aibs(4).

Responsible-Changed-From-To: port-i386-maintainer->jruoho
Responsible-Changed-By: jruoho@NetBSD.org
Responsible-Changed-When: Wed, 22 Jun 2011 10:13:39 +0000
Responsible-Changed-Why:

I recently rewrote the "aiboost", or aibs(4) as it is called now, and I am
fairly confident that this has been fixed in HEAD. Please reply if this is  
not true (a.k.a. feedback timeout).



State-Changed-From-To: open->closed
State-Changed-By: jruoho@NetBSD.org
State-Changed-When: Wed, 22 Jun 2011 10:13:39 +0000
State-Changed-Why:


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.