Enhance DPRINTF to use AcpiFormatException as suggested in PR kern/40130